fix(population): Make `__str__` of populations recursive
The default `__str__` of `List`, which is a parent class of `Population`, does not call `__str__` on each item in the list. `Population` now overrides this behaviour.

--- a/docs/source/guides/examples/algorithm.ipynb
+++ b/docs/source/guides/examples/algorithm.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]']\n"
+      "[[1, 1, 1, 1, 1], [1, 1, 1, 1, 0], [1, 1, 1, 0, 0]]\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,15 +131,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parent:    ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]']\n",
-      "Offspring: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[0, 1, 1, 0, 1]']\n"
+      "Parent:    [[1, 1, 1, 1, 1], [1, 1, 1, 1, 0], [1, 1, 1, 0, 0]]\n",
+      "Offspring: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 0], [1, 1, 1, 0, 0]]\n"
      ]
     }
    ],
@@ -165,11 +165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "joined_pool = pop.join(offspring)"
+    "joined_pool = pop + offspring"
    ]
   },
   {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
       "Fitness of [1, 1, 1, 0, 0] is (3,)\n",
       "Fitness of [1, 1, 1, 1, 1] is (5,)\n",
       "Fitness of [1, 1, 1, 1, 0] is (4,)\n",
-      "Fitness of [0, 1, 1, 0, 1] is (3,)\n"
+      "Fitness of [1, 1, 1, 0, 0] is (3,)\n"
      ]
     }
    ],
@@ -220,15 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "From ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[0, 1, 1, 0, 1]'], the truncation selector\n",
-      "    selects ['[1, 1, 1, 1, 0]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]'].\n"
+      "From [<evokit.evolvables.binstring.BinaryString object at 0x000001D8FB308B00>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB308B30>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB308710>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB1A2D20>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB1A25A0>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB308920>], the truncation selector\n",
+      "    selects [[1, 1, 1, 1, 0], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]].\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,8 +279,7 @@
     "\n",
     "    @override\n",
     "    def step(self) -> None:\n",
-    "        self.population = self.population.join(\n",
-    "            self.variator.vary_population(self.population))\n",
+    "        self.population = self.population + self.variator.vary_population(self.population)\n",
     "\n",
     "        self.evaluator.evaluate_population(self.population)\n",
     "\n",
@@ -297,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial population: ['[1, 0, 0, 1, 1]', '[1, 0, 0, 0, 1]', '[0, 1, 1, 1, 0]']\n"
+      "Initial population: [[0, 0, 0, 1, 0], [1, 0, 0, 0, 1], [1, 1, 0, 0, 1]]\n"
      ]
     }
    ],
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,32 +342,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current population: ['[1, 0, 0, 1, 1]', '[0, 1, 1, 1, 0]', '[1, 1, 1, 1, 1]']\n",
-      "Current fitnesses: [(3,), (3,), (5,)]\n",
-      "Current population: ['[0, 1, 1, 1, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current population: [[1, 1, 0, 0, 1], [1, 0, 1, 0, 1], [1, 1, 0, 0, 1]]\n",
+      "Current fitnesses: [(3,), (3,), (3,)]\n",
+      "Current population: [[1, 1, 0, 0, 1], [1, 1, 0, 0, 1], [1, 0, 1, 0, 1]]\n",
+      "Current fitnesses: [(3,), (3,), (3,)]\n",
+      "Current population: [[1, 1, 0, 0, 1], [1, 0, 1, 0, 1], [1, 0, 0, 1, 1]]\n",
+      "Current fitnesses: [(3,), (3,), (3,)]\n",
+      "Current population: [[1, 1, 0, 0, 1], [1, 0, 1, 1, 0], [1, 0, 0, 1, 1]]\n",
+      "Current fitnesses: [(3,), (3,), (3,)]\n",
+      "Current population: [[1, 0, 0, 1, 1], [1, 1, 0, 0, 1], [1, 0, 0, 1, 1]]\n",
+      "Current fitnesses: [(3,), (3,), (3,)]\n",
+      "Current population: [[1, 1, 0, 0, 1], [1, 0, 0, 1, 1], [1, 1, 0, 0, 1]]\n",
+      "Current fitnesses: [(3,), (3,), (3,)]\n",
+      "Current population: [[1, 1, 1, 0, 1], [1, 1, 1, 0, 1], [1, 1, 1, 1, 1]]\n",
       "Current fitnesses: [(4,), (4,), (5,)]\n",
-      "Current population: ['[1, 1, 1, 0, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current population: [[1, 1, 1, 0, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
       "Current fitnesses: [(4,), (5,), (5,)]\n",
-      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
       "Current fitnesses: [(5,), (5,), (5,)]\n",
-      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
-      "Current fitnesses: [(5,), (5,), (5,)]\n",
-      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
-      "Current fitnesses: [(5,), (5,), (5,)]\n",
-      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
-      "Current fitnesses: [(5,), (5,), (5,)]\n",
-      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
-      "Current fitnesses: [(5,), (5,), (5,)]\n",
-      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
-      "Current fitnesses: [(5,), (5,), (5,)]\n",
-      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
       "Current fitnesses: [(5,), (5,), (5,)]\n"
      ]
     }
