doc(evokit): Update documentation; update accountant tutorial

--- a/docs/source/guides/examples/algorithm.ipynb
+++ b/docs/source/guides/examples/algorithm.ipynb
@@ -11,20 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In EvoKit, an algorithm combines operators to perform the training process.\n",
+    "An evolutionary algorithm iteratively optimises one or more\n",
+    "populations using a collection of evolutionary operators.\n",
+    "Algorithms in EvoKit follow this structure: the algorithm\n",
+    "should accept the initial population(s) and operators during\n",
+    "initialisation, then iterate by calling `.step(...)`.\n",
     "\n",
-    "This example defines an $(\\mu+\\lambda)$ algorithm that maintains one population and accepts one set operators (including one evaluator, one selector, and one variator). These characteristics can be customised.\n",
-    "\n",
-    "<center>\n",
     "<img src='media/emperor.svg' style='width: 35em'></img>\n",
-    "</center>\n",
     "\n",
+    "This tutorial defines an $(\\mu+\\lambda)$ algorithm that maintains\n",
+    "one population and accepts one suite of operators: one\n",
+    "evaluator, one selector, and one variator. \n",
     "\n",
-    "See the following table for guides on how to define individual operators:\n",
+    "The following table indexes guides on how to construct these components:\n",
     "\n",
     "| Component  | Guide                                          |\n",
     "|------------|------------------------------------------------|\n",
-    "|`Individual`|[OneMax tutorial](./onemax.ipynb#Representation)|\n",
+    "|`Individual`|[OneMax tutorial](./onemax.ipynb#Individual)|\n",
     "|`Evaluator`|[Selector tutorial](./onemax.ipynb#Evaluator)|\n",
     "|`Selector`|[OneMax tutorial](./selector.ipynb)|\n",
     "|`Variator`|[OneMax tutorial](./onemax.ipynb#Variator)|"
@@ -34,11 +37,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Setting the Seed\n",
+    "\n",
+    "EvoKit uses only one source of randomness: the `random` module.\n",
+    "Setting random.seed fixes all randomness."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "random.seed(44313)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Manual Selection\n",
     "\n",
-    "The algorithm automates the training of evolutionary algorithms. To understand the process, it is best to train an algorithm by hand.\n",
+    "Before defining the algorithm, it might be helpful to see how\n",
+    "things work \"under the hood\" and construct a simple algorithm by\n",
+    "hand.\n",
     "\n",
-    "Skip to [Designing the Algorithm](#Designing-the-Algorithm) for how an algorithm is defined."
+    "For how to automate this process with an `core.Algorithm`,\n",
+    "see section [Designing the Algorithm](#Designing-the-Algorithm)."
    ]
   },
   {
@@ -49,12 +75,15 @@
     "\n",
     "The evolutionary process acts not on individuals, but populations.\n",
     "\n",
-    "To begin, create the initial `Population` of bit string representations. Check that the individuals are correctly initialised. A population in EvoKit essentially behaves like a `list`."
+    "To begin, create the initial `Population` of bit string\n",
+    "representations, then check that the individuals are correctly\n",
+    "initialised. A population in EvoKit implements `list`: its items\n",
+    "can be directly accessed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,44 +118,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `.fitness` attribute of an individual stores its fitness. For new individuals, this attribute is uninitialised and accessing it raises an error.\n",
+    "The `.fitness` attribute of an individual stores its fitness.\n",
+    "If this property is accessed while not set, the tuple `(\"nan\",)`\n",
+    "is returned instead.\n",
     "\n",
     "To check if the `.fitness` is initialised, call `.has_fitness`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An ValueError is raised, with message \"Fitness is accessed but null.\n",
-      "   Call `.has_fitness` to check if the fitness is defined.\"\n",
-      "It is _False_ that the fitness of `pop[0]` is defined.\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    pop[0].fitness\n",
-    "except ValueError as e:\n",
-    "    print(f\"An {type(e).__name__} is raised, with message \\\"{e}\\\"\")\n",
-    "\n",
-    "print(f\"It is _{pop[0].has_fitness()}_ that the fitness of `pop[0]` is defined.\") "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Variate\n",
-    "\n",
-    "A variator creates new individuals (offspring) from existing individuals. A mutator, in particular, is a variator that uses only one parent. All variators in EvoKit must ensure that operations performed on offspring do not affect the parent.\n",
-    "\n",
-    "The canonical mutator (`MutateBits`) for bit strings flips each digit with probability `mutation_rate`. Applying the mutator to the population creates a new population."
    ]
   },
   {
@@ -138,8 +134,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The fitness of an unevaluated individual is (nan,)\n",
+      "It is _False_ that the fitness of `pop[0]` is defined.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The fitness of an unevaluated individual is\"\n",
+    "      f\" {pop[0].fitness}\")\n",
+    "\n",
+    "print(f\"It is _{pop[0].has_fitness()}_ that the fitness of `pop[0]` is defined.\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variate\n",
+    "\n",
+    "A variator creates new individuals (offspring) from existing\n",
+    "ones. A mutator, in particular, is a variator that uses only\n",
+    "one parent. All variators in EvoKit must ensure that operations\n",
+    "performed on offspring do not affect the parent, this is best\n",
+    "done by calling `Individual.copy`.\n",
+    "\n",
+    "The canonical mutator (`MutateBits`) flips each digit in a bit\n",
+    "string with probability `mutation_rate`. Applying the mutator\n",
+    "to the population creates a new population."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Parent:    [[1, 1, 1, 1, 1], [1, 1, 1, 1, 0], [1, 1, 1, 0, 0]]\n",
-      "Offspring: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 0], [1, 1, 1, 0, 0]]\n"
+      "Offspring: [[1, 1, 1, 0, 1], [1, 1, 1, 1, 0], [1, 1, 1, 0, 0]]\n"
      ]
     }
    ],
@@ -165,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,14 +210,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The canonical evaluator (`CountBits`) for bit strings sums all digits in the string. Once the evaluator is initialised, call `.evaluate_population` with the population as argument. Check that all individuals in the population are correctly evaluated.\n",
+    "The canonical evaluator (`CountBits`) sums all digits in\n",
+    "the string. Once the evaluator is initialised, call\n",
+    "`.evaluate_population(...)` with the population as argument.\n",
+    "Check that all individuals in the population are correctly evaluated.\n",
     "\n",
-    "Note:  unlike its counterparts `Variator.vary_population` and `Selector.select_population`, `.evaluate_population` does not return a value but rather modifies an attribute of its argument. To prevent any misunderstanding, `.evaluate_population` explicitly returns `None`."
+    "Note: Unlike its counterparts `Variator.vary_population` and\n",
+    "`Selector.select_population`, `.evaluate_population` modifies its\n",
+    "argument in place (by assigning to their `.fitness` attributes).\n",
+    "To highlight this, `.evaluate_population(...)` returns `None`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +233,7 @@
       "Fitness of [1, 1, 1, 1, 1] is (5,)\n",
       "Fitness of [1, 1, 1, 1, 0] is (4,)\n",
       "Fitness of [1, 1, 1, 0, 0] is (3,)\n",
-      "Fitness of [1, 1, 1, 1, 1] is (5,)\n",
+      "Fitness of [1, 1, 1, 0, 1] is (4,)\n",
       "Fitness of [1, 1, 1, 1, 0] is (4,)\n",
       "Fitness of [1, 1, 1, 0, 0] is (3,)\n"
      ]
@@ -214,30 +254,30 @@
    "source": [
     "### Select\n",
     "\n",
-    "A selector selects from a `Population` into a strict subset. The `TruncationSelector`, in particular, selects individuals with the highest `.fitness`.\n",
-    "\n"
+    "A selector selects from a `Population` into a strict subset.\n",
+    "The `TruncationSelector`, in particular, selects individuals\n",
+    "with the highest `.fitness`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "From [<evokit.evolvables.binstring.BinaryString object at 0x000001D8FB308B00>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB308B30>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB308710>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB1A2D20>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB1A25A0>, <evokit.evolvables.binstring.BinaryString object at 0x000001D8FB308920>], the truncation selector\n",
-      "    selects [[1, 1, 1, 1, 0], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]].\n"
+      "The truncation selector selects [[1, 1, 1, 0, 1], [1, 1, 1, 1, 0], [1, 1, 1, 1, 1]].\n"
      ]
     }
    ],
    "source": [
     "from evokit.evolvables.selectors import TruncationSelector\n",
     "\n",
-    "new_pop = TruncationSelector(budget=3).select_population(joined_pool)\n",
-    "print(f\"From {joined_pool}, the truncation selector\\n\"\n",
-    "      f\"    selects {new_pop}.\")"
+    "new_pop = TruncationSelector[BinaryString](budget=3)\\\n",
+    "      .select_population(joined_pool)  # type: ignore\n",
+    "print(f\"The truncation selector selects {new_pop}.\")"
    ]
   },
   {
@@ -246,16 +286,16 @@
    "source": [
     "## Designing the Algorithm\n",
     "\n",
-    "Time to automate! To implement a custom algorithm, extend `Algorithm` and override at least two of its methods:\n",
+    "Let's automate! To implement a custom algorithm, extend `Algorithm` and override at least two of its methods:\n",
     "\n",
-    "* `.__init__` initialises parameters of the algorithm itself. In this example, it accepts the initial population and a minimal set of operators.\n",
+    "* `.__init__(..)` initialises parameters of the algorithm itself. In this example, it accepts the initial population and a minimal set of operators.\n",
     "\n",
-    "* `.step` performs one iteration."
+    "* `.step(..)` performs one iteration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,20 +336,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial population: [[0, 0, 0, 1, 0], [1, 0, 0, 0, 1], [1, 1, 0, 0, 1]]\n"
+      "Initial population: [[1, 0, 1, 0, 0], [0, 1, 1, 0, 1], [1, 1, 1, 1, 1]]\n"
      ]
     }
    ],
    "source": [
-    "another_pop = Population(*(BinaryString.random(size=5)\n",
-    "                                       for _ in range(3)))\n",
+    "another_pop = Population((BinaryString.random(size=5)\n",
+    "                                      for _ in range(3)))\n",
     "\n",
     "print(f\"Initial population: {another_pop}\")"
    ]
@@ -323,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "ctrl = SimpleMuPlusLambda(another_pop,\n",
-    "                        CountBits(),\n",
-    "                        TruncationSelector(budget=3),\n",
-    "                        MutateBits(mutation_rate=0.1))"
+    "                          CountBits(),\n",
+    "                          TruncationSelector(budget=3),\n",
+    "                          MutateBits(mutation_rate=0.1))"
    ]
   },
   {
@@ -342,29 +382,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current population: [[1, 1, 0, 0, 1], [1, 0, 1, 0, 1], [1, 1, 0, 0, 1]]\n",
-      "Current fitnesses: [(3,), (3,), (3,)]\n",
-      "Current population: [[1, 1, 0, 0, 1], [1, 1, 0, 0, 1], [1, 0, 1, 0, 1]]\n",
-      "Current fitnesses: [(3,), (3,), (3,)]\n",
-      "Current population: [[1, 1, 0, 0, 1], [1, 0, 1, 0, 1], [1, 0, 0, 1, 1]]\n",
-      "Current fitnesses: [(3,), (3,), (3,)]\n",
-      "Current population: [[1, 1, 0, 0, 1], [1, 0, 1, 1, 0], [1, 0, 0, 1, 1]]\n",
-      "Current fitnesses: [(3,), (3,), (3,)]\n",
-      "Current population: [[1, 0, 0, 1, 1], [1, 1, 0, 0, 1], [1, 0, 0, 1, 1]]\n",
-      "Current fitnesses: [(3,), (3,), (3,)]\n",
-      "Current population: [[1, 1, 0, 0, 1], [1, 0, 0, 1, 1], [1, 1, 0, 0, 1]]\n",
-      "Current fitnesses: [(3,), (3,), (3,)]\n",
-      "Current population: [[1, 1, 1, 0, 1], [1, 1, 1, 0, 1], [1, 1, 1, 1, 1]]\n",
-      "Current fitnesses: [(4,), (4,), (5,)]\n",
       "Current population: [[1, 1, 1, 0, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
       "Current fitnesses: [(4,), (5,), (5,)]\n",
+      "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
       "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
       "Current fitnesses: [(5,), (5,), (5,)]\n",
       "Current population: [[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
@@ -377,6 +417,42 @@
     "    ctrl.step()\n",
     "    print(f\"Current population: {ctrl.population}\")\n",
     "    print(f\"Current fitnesses: {[ind.fitness for ind in ctrl.population]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Congratulations! You have implemented an evolutionary algorithm.\n",
+    "This algorithm can be used with any combination of individuals and operators.\n",
+    "\n",
+    "In fact, `SimpleMuPlusLambda` differs by one line from the stock algorithm\n",
+    "`evolvables.algorithms.SimpleLinearAlgorithm`, which implements\n",
+    "$(\\mu, \\lambda)$ selection instead. A shortened version with\n",
+    "event reporting removed is provided below:\n",
+    "\n",
+    "```python\n",
+    "...\n",
+    "class SimpleLinearAlgorithm(Algorithm, Generic[T]):\n",
+    "    @override\n",
+    "    def __init__(self,\n",
+    "                 population: Population[T],\n",
+    "                 evaluator: Evaluator[T],\n",
+    "                 selector: Selector[T],\n",
+    "                 variator: Variator[T]) -> None:\n",
+    "        self.population = population\n",
+    "        self.evaluator = evaluator\n",
+    "        self.selector = selector\n",
+    "        self.variator = variator\n",
+    "        self.accountants: list[Accountant[SimpleLinearAlgorithm[T], Any]] = []\n",
+    "\n",
+    "    @override\n",
+    "    def step(self) -> None:\n",
+    "        self.population = self.variator.vary_population(self.population)\n",
+    "        self.evaluator.evaluate_population(self.population)\n",
+    "        self.population = self.selector.select_population(self.population)\n",
+    "...\n",
+    "```"
    ]
   }
  ],
